# investment-thesis

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Investment-Thesis-PRD.md  README.md  docker-compose.yml
backend/: .env.example  API_COLLECTION.md  Dockerfile  alembic.ini  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: business_profiles.py  companies.py  documents.py  financials.py  health.py  quarterly_updates.py  thesis.py
backend/app/models/: __init__.py  base.py  business_profile.py  company.py  document.py  financial_snapshot.py  quarterly_update.py  segment.py  thesis_version.py
backend/app/prompts/: business_profile.txt  quarterly_summary.txt  thesis_generation.txt
backend/app/schemas/: business_profile.py  company.py  document.py  financial_snapshot.py  quarterly_update.py  thesis_version.py
backend/app/services/: company_service.py  edgar_service.py  financial_data_service.py  financial_ingestion_service.py  financial_service.py  llm_service.py  market_sentiment_service.py  sedar_service.py  storage_service.py  thesis_service.py
backend/app/tasks/: celery_app.py  quarterly_ingestion.py
backend/scripts/: README.md  fetch_sp500_ciks.py  seed_companies.py
backend/tests/: conftest.py
backend/tests/api/: test_companies.py  test_health.py
backend/tests/services/: test_company_service.py  test_edgar_service.py  test_financial_data_service.py  test_llm_service.py
(+43 files in other folders)
